--- a/hello.html
+++ b/hello.html
@@ -6,13 +6,6 @@
 </head>
 <body>
 <h2>Hello, world!!!</h2>
-<a>Test65</a>
-<ul>
-    <li>2</li>
-    <li>2</li>
-    <li>3</li>
-    <li>4</li>
-    <li>5</li>
-  </ul>
+<a>Test</a>
 </body>
 </html>
